# PythonX_Quadratic

./: README.md
Quadratic/: pyproject.toml
Quadratic/.github/workflows/: ci.yml
Quadratic/src/quadratic/: __init__.py  cli.py  quadratic.py
Quadratic/tests/: test_solver.py
